# fpt2022-artifact

./: LICENSE  README.md
Buffers/src/: DFnetlist.cpp  DFnetlist_MG.cpp  DFnetlist_buffers.cpp  DFnetlist_channel_width.cpp  DFnetlist_read_dot.cpp  DFnetlist_write_dot.cpp  Dataflow.h  MILP_Model.h
benchmarks/Tri_Sp_Slv/: Tri_Sp_Slv.cpp  Tri_Sp_Slv.h
benchmarks/adi_int/: adi_int.cpp  adi_int.h
benchmarks/dist_itr/: dist_itr.cpp  dist_itr.h
benchmarks/dist_itr_param/: dist_itr_param.cpp  dist_itr_param.h
benchmarks/dist_param/: dist_param.cpp  dist_param.h
benchmarks/jacobi_2d_imper/: jacobi_2d_imper.cpp  jacobi_2d_imper.h
benchmarks/kernel4/: kernel4.cpp  kernel4.h
benchmarks/kernel5/: kernel5.cpp  kernel5.h
benchmarks/kernel6/: kernel6.cpp  kernel6.h
benchmarks/pivot/: pivot.cpp  pivot.h
benchmarks/typ_loop/: typ_loop.cpp  typ_loop.h
components/: elastic_components.vhd
dot2vhdl/: Makefile
dot2vhdl/src/: dot_parser.cpp  vhdl_writer.cpp  vhdl_writer.h
elastic-circuits/: CMakeLists.txt
elastic-circuits/ElasticPass/: AddComp.cpp  CMakeLists.txt  Memory.cpp  PrintDot.cpp  SanityChecker.cpp
elastic-circuits/ElasticPass/DASSOptimizations/: AddControlForCall.cpp  DASSUtils.cpp  OptimizeCF.cpp  OptimizePointersForIO.cpp  ShiftBlockID.cpp
elastic-circuits/MemElemInfo/: IndexAnalysis.cpp  MemElemInfo.cpp  MemUtils.cpp  TokenDependenceInfo.cpp
elastic-circuits/MyCFGPass/: MyCFGPass.cpp
elastic-circuits/examples/: Makefile  filelist.lst  foo.cpp
elastic-circuits/include/ElasticPass/: CircuitGenerator.h  Head.h  Nodes.h
elastic-circuits/include/ElasticPass/DASS/: DASSUtils.h
elastic-circuits/include/MemElemInfo/: MemElemInfo.h
elastic-circuits/include/MyCFGPass/: MyCFGPass.h
